[users-client] feat : login and signup pages

--- a/apps/users-client/src/styles.css
+++ b/apps/users-client/src/styles.css
@@ -2,4 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* styles.css or styles.scss */
+@import '@angular/material/prebuilt-themes/pink-bluegrey.css'; /* Use a different pre-built theme if desired */
+
+
 /* You can add global styles to this file, and also import other style files */
