--- a/libs/users-client/auth/feature/register/src/lib/register/register.component.html
+++ b/libs/users-client/auth/feature/register/src/lib/register/register.component.html
@@ -1,1 +1,21 @@
-<p>register works!</p>
+<div class="text-white w-4/6 h-5/6 rounded-xl  border border-white p-2 flex flex-col justify-center items-center">
+  <div class="head text-center text-2xl  h-3/12">
+    Register
+  </div>
+  <div class="form flex-grow mt-5 flex justify-center items-center">
+    <form action="" class="flex justify-center flex-col">
+
+
+
+    </form>
+
+
+  </div>
+  <div class="social">
+    social
+
+  </div>
+
+</div>
+
+<a [routerLink]="['/auth/login']" routerLinkActive="router-link-active" >Login</a>
