--- a/libs/users-client/auth/feature/login/src/lib/login/login.component.html
+++ b/libs/users-client/auth/feature/login/src/lib/login/login.component.html
@@ -1,1 +1,3 @@
-<p>login works!</p>
+<p class="text-white">Login works!</p>
+
+<a [routerLink]="['/auth/register']" routerLinkActive="router-link-active" >Login</a>
