--- a/libs/users-client/auth/ui/layout/src/lib/authLayout/auth-layout.component.css
+++ b/libs/users-client/auth/ui/layout/src/lib/authLayout/auth-layout.component.css
@@ -1,5 +1,5 @@
 .img-wrapper {
-  background-image: url('/assets/login-bg.webp');
+  background:  url('/assets/auth.jpg');
   background-size: cover;
   background-position: 30% 40%;
 }
