--- a/libs/users-client/auth/feature/register/src/lib/register/register.component.html
+++ b/libs/users-client/auth/feature/register/src/lib/register/register.component.html
@@ -53,6 +53,7 @@
         <fs-google-icon (click)="registerWithGoogle()"  class="hover:cursor-pointer text-center"></fs-google-icon>
          <fs-fb-icon (click)="registerWithFacebook()" class="hover:cursor-pointer"></fs-fb-icon>
         <fs-twitter-icon (click)="registerWithTwitter()" class="hover:cursor-pointer"></fs-twitter-icon>
+        <button (click)="registerWithEmailAndPassword()">but</button>
       </div>
 
       <p>Already a member? <a class="text-blue-400" routerLink="/auth/login">Login</a></p>
