--- a/libs/users-client/auth/feature/register/src/lib/register/register.component.html
+++ b/libs/users-client/auth/feature/register/src/lib/register/register.component.html
@@ -10,42 +10,72 @@
 
 
       <form action="" matchPassword (ngSubmit)="handleSubmit(registerForm)"  #registerForm="ngForm"  class="flex justify-center flex-col w-[100%] items-center gap-4">
-
-        <div *ngIf="errorMessage" class="w-full h-10 flex items-center justify-center text-center px-5 border border-red-600 bg-red-500/30 ">
-          {{ errorMessage }}      
-    
-        </div>
-        <div class="w-full flex flex-col px-5">
+        <div class="w-full flex flex-col px-5 relative">
           
             <label for="username" class="block">Username</label>
  
-          <input required minlength="4" [ngModelOptions]="{updateOn: 'blur'}" sample  ngModel #userName="ngModel"  type="text"  id="username" placeholder="Eg: john_joseph" class="border text-sm mt-1 p-2 rounded-lg w-full h-8" name="username">
-          <small class="text-red-700 ml-1" *ngIf="userName.control.errors && userName.dirty">{{userName.control.errors | json}}</small>
+          <input 
+           required 
+            minlength="4" 
+             [ngModelOptions]="{updateOn: 'blur'}" 
+              ngModel
+               #userName="ngModel" 
+               type="text" 
+                id="username"
+                 placeholder="Eg: john_joseph"
+                  class="border text-sm mt-1 p-2 rounded-lg w-full h-8"
+                   name="username">
+          <small class="text-red-700 ml-1 absolute top-14" *ngIf="userName.control.errors && userName.control.errors['minlength'] &&  userName.dirty">Username must be atleast 4 letters long</small>
 
         </div>
 
-        <div class="form-field w-full flex flex-col px-5">
+        <div class="form-field w-full flex flex-col px-5 relative">
           
             <label for="email" class="block mb-1">Email</label>
           
-          <input ngModel email  required type="email" id="email" placeholder="Eg: joseph@gmail.com" class="border p-2 rounded-lg w-full h-8" name="email">
-          <small class="text-red-700 ml-1" *ngIf="userName.control.errors && userName.dirty">{{userName.control.errors | json}}</small>
+          <input
+           ngModel
+            email
+             required
+              type="email" 
+               #email="ngModel" 
+                id="email" 
+                 placeholder="Eg: joseph@gmail.com" 
+                  class="border p-2 rounded-lg w-full h-8" 
+                   name="email">
+          <small class="text-red-700 ml-1 absolute top-14" *ngIf="email.control.errors && email.control.errors['email'] && email.dirty">Must be a valid email</small>
         </div>
 
-        <div class="form-field w-[100%] flex flex-col px-5">
+        <div class="form-field w-[100%] flex flex-col px-5 relative">
           
             <label for="password" class="block mb-1">Password</label>
           
-          <input ngModel required type="password" id="password" placeholder="*********" class="border p-2 rounded-lg w-full h-8" name="password">
-          <small class="text-red-700 ml-1" *ngIf="userName.control.errors && userName.dirty">{{userName.control.errors | json}}</small>
+          <input 
+          ngModel 
+          required 
+          minlength="6"
+          type="password" 
+          id="password" placeholder="*********" 
+          class="border p-2 rounded-lg w-full h-8" 
+          #password="ngModel"
+          name="password">
+          <small class="text-red-700 ml-1 absolute top-14" *ngIf="password.control.errors && password.control.errors['minlength'] && password.dirty">Password must be 6 letter long</small>
         </div>
 
-        <div class="form-field w-[100%] flex flex-col px-5">
+        <div class="form-field w-[100%] flex flex-col px-5 relative">
           
             <label for="confirmPassword" class="block mb-1">Confirm password</label>
           
-          <input ngModel required type="password" id="confirmPassword" placeholder="********" class="border p-2 rounded-lg w-full h-8" name="confirmPassword">
-          <small class="text-red-700 ml-1" *ngIf="userName.control.errors && userName.dirty">{{userName.control.errors | json}}</small>
+          <input
+           ngModel
+            required
+             type="password"
+              id="confirmPassword"
+               placeholder="********"
+                class="border p-2 rounded-lg w-full h-8"
+                 name="confirmPassword"
+                  #confirmPassword="ngModel">
+          <small class="text-red-700 ml-1 absolute top-14 " *ngIf="registerForm.errors && registerForm.errors['isPasswordsDoNotMatch'] && confirmPassword.dirty">Passwords do not match</small>
         </div>
 
 
