--- a/libs/users-client/auth/feature/register/src/lib/register/register.component.html
+++ b/libs/users-client/auth/feature/register/src/lib/register/register.component.html
@@ -23,12 +23,20 @@
                 id="username"
                  placeholder="Eg: john_joseph"
                   class="border text-sm mt-1 p-2 rounded-lg w-full h-8"
+                  username-available
+                  [ngModelOptions]="{updateOn: 'blur'}"
                    name="username">
           <small
            class="text-red-700 ml-1 absolute top-14"
             *ngIf="userName.control.errors  && userName.control.errors['minlength'] &&  userName.dirty">
             Username must be atleast 4 letters long
           </small>
+
+          <small
+          class="text-red-700 ml-1 absolute top-14"
+           *ngIf="userName.control.errors  && userName.control.errors['usernameTaken'] &&  userName.dirty">
+           Username is taken
+         </small>
 
         </div>
 
@@ -102,9 +110,9 @@
       <h4>Or register with</h4>
 
       <div class="links justify-center flex gap-3">
-        <!-- <fs-google-icon (click)="registerWithGoogle()"  class="hover:cursor-pointer text-center"></fs-google-icon>
-         <fs-fb-icon (click)="registerWithFacebook()" class="hover:cursor-pointer"></fs-fb-icon>
-        <fs-twitter-icon (click)="registerWithTwitter()" class="hover:cursor-pointer"></fs-twitter-icon> -->
+        <fs-google-icon (click)="registerWithGoogle()"  class="hover:cursor-pointer text-center"></fs-google-icon>
+          <fs-fb-icon (click)="registerWithFacebook()" class="hover:cursor-pointer"></fs-fb-icon>
+        <fs-twitter-icon (click)="registerWithTwitter()" class="hover:cursor-pointer"></fs-twitter-icon>
       </div>
 
       <p>Already a member? <a class="text-blue-400" routerLink="/auth/login">Login</a></p>
