--- a/libs/users-client/profile/feature/src/lib/profile.component.html
+++ b/libs/users-client/profile/feature/src/lib/profile.component.html
@@ -1,7 +1,7 @@
 <div class="w-screen min-h-screen md:pl-56">
   <div class="md:px-4">
     <div class="nonposts  md:px-16  w-full  h-3/5 ">
-      <fs-bio-section></fs-bio-section>
+      <fs-bio-section [isOwnProfile]="isOwnProfile$ | async"  [currentUser]="currUser$ | async"></fs-bio-section>
       <fs-highlights></fs-highlights>
     </div>
     <div class="posts-section mb-16 h-2/5  w-full mt-2 md:px-10">
