[API-GATEWAY] core: firebase admin module

--- a/libs/users-client/post/feature/create-post/src/lib/create-post/create-post.component.html
+++ b/libs/users-client/post/feature/create-post/src/lib/create-post/create-post.component.html
@@ -45,7 +45,7 @@
             <div class="description w-full">
               <mat-form-field appearance="outline" class="w-full">
                 <mat-label>Caption</mat-label>
-                <textarea [formControl]="description" form matInput name="description"  placeholder="Write a  caption"></textarea>
+                <textarea [formControl]="caption" form matInput name="description"  placeholder="Write a  caption"></textarea>
               </mat-form-field>
 
               <button (click)="sharePost()"mat-raised-button class="w-full" color="primary">Share</button>
