feat:  create post and post listing in profile implemented

--- a/libs/users-client/shared/ui/sidebar-layout/src/lib/sidebar-layout/sidebar-layout.component.html
+++ b/libs/users-client/shared/ui/sidebar-layout/src/lib/sidebar-layout/sidebar-layout.component.html
@@ -46,7 +46,7 @@
    </button>
 
   
-   <a routerLink="/jithu_jamshed">
+   <a [routerLink]="profilePageLink | async">
     <div class="home flex items-center h-8 space-x-3">
       <mat-icon class="material-symbols-outlined">person</mat-icon>
       <span class="text-lg">Profile</span>
