--- a/libs/users-client/profile/feature/src/lib/profile.component.html
+++ b/libs/users-client/profile/feature/src/lib/profile.component.html
@@ -12,7 +12,7 @@
               <mat-icon class="example-tab-icon">grid_view</mat-icon>
             </ng-template>
             <div class="posts-section mb-16 md:mb-0  ">
-              <fs-posts></fs-posts>
+              <fs-posts [posts]="(posts$ | async) || []"></fs-posts>
             </div>
           </mat-tab>
         
