--- a/apps/users-client/src/styles.css
+++ b/apps/users-client/src/styles.css
@@ -32,3 +32,28 @@
   border-radius: 50%;
   
 }
+
+
+@keyframes iconClickedAnimation {
+  0% {
+    transform: scale(1);
+    font-size: 36px;
+  }
+  50% {
+    transform: scale(1.2);
+    font-size: 23px;
+  }
+  100% {
+    transform: scale(1);
+    font-size: 54px;
+  }
+
+}
+
+mat-icon {
+  transition: transform 0.3s ease-in;
+}
+
+.animate-icon-click {
+  animation: scaleAnimation 0.5s ease-in; 
+}
