--- a/libs/users-client/shared/ui/sidebar-layout/src/lib/sidebar-layout/sidebar-layout.component.html
+++ b/libs/users-client/shared/ui/sidebar-layout/src/lib/sidebar-layout/sidebar-layout.component.html
@@ -1,70 +1,86 @@
 
 
-<div class="sidebar fixed left-0 z-10  hidden w-56 md:block h-screen border-r-2 px-4" style="font-family: Robot Mono, monospace;">
+<mat-drawer-container class="example-container">
+  <mat-drawer #drawer>
+    <fs-search-box></fs-search-box>
+  </mat-drawer>
+  <mat-drawer-content>
+
+    <div class="sidebar fixed left-0 z-10  hidden w-56 md:block h-screen border-r-2 px-4" style="font-family: Robot Mono, monospace;">
 
 
-  <div class="logo mt-8">
-   <span class="text-2xl  font-mono font-bold ">FoodStories</span>
-  </div>
-
-  <div class="tabs w-full h-screen mt-8 flex space-y-6 flex-col ">
-    <a href="" routerLink="/">
-      <div class="home flex items-center h-8 space-x-3">
-        <mat-icon class="active">home</mat-icon>
-        <span class="text-lg">Home</span>
+      <div class="logo mt-8">
+       <span class="text-2xl  font-mono font-bold ">FoodStories</span>
       </div>
-    </a>
+    
+      <div class="tabs w-full h-screen mt-8 flex space-y-6 flex-col ">
+        <a href="" routerLink="/">
+          <div class="home flex items-center h-8 space-x-3">
+            <mat-icon class="active">home</mat-icon>
+            <span class="text-lg">Home</span>
+          </div>
+        </a>
+    
+     <button (click)="drawer.toggle()">
+      <div class="home flex items-center h-8 space-x-3">
+        <mat-icon class="material-symbols-outlined">search</mat-icon>
+        <span class="text-lg">Search</span>
+      </div>
 
-
-   <div class="home flex items-center h-8 space-x-3">
-     <mat-icon class="material-symbols-outlined">search</mat-icon>
-     <span class="text-lg">Search</span>
-   </div>
-
-   <div class="home flex items-center h-8 space-x-3">
-     <mat-icon class="material-symbols-outlined">explore_border</mat-icon>
-     <span class="text-lg">Explore</span>
-   </div>
-
-   <div class="home flex items-center h-8 space-x-3">
-    <mat-icon class="material-symbols-outlined">chat</mat-icon>
-    <span class="text-lg">Messages</span>
-  </div>
-
-
-   <div class="home flex items-center h-8 space-x-3">
-     <mat-icon class="material-symbols-outlined">favorite</mat-icon>
-     <span class="text-lg">Notification</span>
-   </div>
+     </button>
    
-
-   <button (click)="openCreateNewPostDialogBox()">
-    <div class="home flex items-center h-8 space-x-3">
-      <mat-icon class="material-symbols-outlined">add</mat-icon>
-      <span class="text-lg">Create</span>
-    </div>
-   </button>
-
-  
-   <a [routerLink]="profilePageLink | async">
-    <div class="home flex items-center h-8 space-x-3">
-      <mat-icon class="material-symbols-outlined">person</mat-icon>
-      <span class="text-lg">Profile</span>
-    </div>
-   </a>
-
-   <div class="home flex items-center h-8 space-x-3">
-    <mat-icon class="material-symbols-outlined">more_vert</mat-icon>
-    <span class="text-lg">More</span>
-  </div>
-  </div>
+<!--      
+       <div class="home flex items-center h-8 space-x-3">
+         <mat-icon class="material-symbols-outlined">explore_border</mat-icon>
+         <span class="text-lg">Explore</span>
+       </div> -->
+    
+       <div class="home flex items-center h-8 space-x-3">
+        <mat-icon class="material-symbols-outlined">chat</mat-icon>
+        <span class="text-lg">Messages</span>
+      </div>
+    
+    
+       <div class="home flex items-center h-8 space-x-3">
+         <mat-icon class="material-symbols-outlined">favorite</mat-icon>
+         <span class="text-lg">Notification</span>
+       </div>
        
+    
+       <button (click)="openCreateNewPostDialogBox()">
+        <div class="home flex items-center h-8 space-x-3">
+          <mat-icon class="material-symbols-outlined">add</mat-icon>
+          <span class="text-lg">Create</span>
+        </div>
+       </button>
+    
+      
+       <a [routerLink]="profilePageLink | async">
+        <div class="home flex items-center h-8 space-x-3">
+          <mat-icon class="material-symbols-outlined">person</mat-icon>
+          <span class="text-lg">Profile</span>
+        </div>
+       </a>
+    
+       <div class="home flex items-center h-8 space-x-3">
+        <mat-icon class="material-symbols-outlined">more_vert</mat-icon>
+        <span class="text-lg">More</span>
+      </div>
+      </div>
+           
+    
+     </div>
+    
+    
+    
+     <router-outlet></router-outlet>
+    
 
- </div>
+    
+  </mat-drawer-content>
+</mat-drawer-container>
 
 
-
- <router-outlet></router-outlet>
 
 
 
