[users-client]  feat: search  other users

--- a/libs/users-client/feed/feature/src/lib/feed.component.html
+++ b/libs/users-client/feed/feature/src/lib/feed.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    <fs-stories></fs-stories>
+    <!-- <fs-stories></fs-stories> -->
     <fs-feeds></fs-feeds>
 
   </div>
