--- a/libs/users-client/shared/ui/sidebar-layout/src/lib/sidebar-layout/sidebar-layout.component.html
+++ b/libs/users-client/shared/ui/sidebar-layout/src/lib/sidebar-layout/sidebar-layout.component.html
@@ -2,7 +2,7 @@
 
 <mat-drawer-container class="example-container">
   <mat-drawer #drawer>
-    <fs-search-box></fs-search-box>
+    <fs-search-box (closeDrawer)="drawer.close()"></fs-search-box>
   </mat-drawer>
   <mat-drawer-content>
 
