--- a/libs/users-client/profile/feature/src/lib/profile.component.html
+++ b/libs/users-client/profile/feature/src/lib/profile.component.html
@@ -1,8 +1,8 @@
 <div class="w-screen min-h-screen md:pl-56">
   <div class="md:px-4">
-    <div class="nonposts  md:px-16  w-full  h-3/5 ">
+    <div class="nonposts flex items-center  md:px-16  w-full  h-[60vh] ">
       <fs-bio-section [isOwnProfile]="isOwnProfile$ | async"  [currentUser]="currUser$ | async"></fs-bio-section>
-      <fs-highlights></fs-highlights>
+      <!-- <fs-highlights></fs-highlights> -->
     </div>
 
       <div class="post-sections w-full flex justify-evenly " >
