[common] fix: kafka consuming before bootstraping  bug  fixed

--- a/libs/users-client/post/feature/single-post-view/src/lib/single-post-view/single-post-view.component.html
+++ b/libs/users-client/post/feature/single-post-view/src/lib/single-post-view/single-post-view.component.html
@@ -101,7 +101,7 @@
 
     </div>
     <div class="Actions flex flex-col pl-2  justify-center w-full h-12">
-        <span>Liked by super.tramp.__ and 24 others</span>
+        <span>Liked by {{data.post.likesCount}}</span>
         <p><span class="font-light text-gray-500">{{ data.post.createdAt | date}}</span></p>
 
     </div>
