--- a/libs/users-client/profile/feature/src/lib/profile.component.html
+++ b/libs/users-client/profile/feature/src/lib/profile.component.html
@@ -1,36 +1,40 @@
 <div class="w-screen min-h-screen md:pl-56">
   <div class="md:px-4">
     <div class="nonposts flex items-center  md:px-16  w-full  h-[60vh] ">
-      <fs-bio-section [isFollowing]="isFollowing$ | async" [isBlocked]="isBlocked$ | async" [isOwnProfile]="isOwnProfile$ | async"  [currentUser]="currUser$ | async"></fs-bio-section>
+      <fs-bio-section [isFollowing]="isFollowing$ | async" [isBlocked]="isBlocked$ | async"
+      (blockUserEvent)="onBlockUser()" (unblockUserEvent)="onUnblockUser()"
+        [isOwnProfile]="isOwnProfile$ | async" [currentUser]="currUser$ | async"></fs-bio-section>
       <!-- <fs-highlights></fs-highlights> -->
     </div>
 
-      <div *ngIf="(isBlocked$ | async) === false && ((currUser$ | async)?.isPrivate === false ||(isOwnProfile$ | async) === true || (isFollowing$ | async) === true)" class="post-sections w-full flex justify-evenly " >
-        <mat-tab-group  class="w-full md:px-10">
-          <mat-tab>
-            <ng-template mat-tab-label>
-              <mat-icon class="example-tab-icon">grid_view</mat-icon>
-            </ng-template>
-            <div class="posts-section mb-16 md:mb-0  ">
-              <fs-posts-grid [currUser]="currUser$ | async" [posts]="(posts$ | async) || []"></fs-posts-grid>
-            </div>
-          </mat-tab>
-        
-          <mat-tab>
-            <ng-template mat-tab-label>
-              <mat-icon class="example-tab-icon">menu_book</mat-icon>
-            </ng-template>
-            Content 2
-          </mat-tab>
-        
-          <mat-tab>
-            <ng-template mat-tab-label>
-              <mat-icon class="example-tab-icon">sell</mat-icon>
-            </ng-template>
-        
-            Content 3
-          </mat-tab>
-        </mat-tab-group>
-      </div>
+    <div
+      *ngIf="(isBlocked$ | async) === false && ((currUser$ | async)?.isPrivate === false ||(isOwnProfile$ | async) === true || (isFollowing$ | async) === true)"
+      class="post-sections w-full flex justify-evenly ">
+      <mat-tab-group class="w-full md:px-10">
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon class="example-tab-icon">grid_view</mat-icon>
+          </ng-template>
+          <div class="posts-section mb-16 md:mb-0  ">
+            <fs-posts-grid [currUser]="currUser$ | async" [posts]="(posts$ | async) || []"></fs-posts-grid>
+          </div>
+        </mat-tab>
+
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon class="example-tab-icon">menu_book</mat-icon>
+          </ng-template>
+          Content 2
+        </mat-tab>
+
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon class="example-tab-icon">sell</mat-icon>
+          </ng-template>
+
+          Content 3
+        </mat-tab>
+      </mat-tab-group>
+    </div>
   </div>
 </div>
